Fix History page image overstretching issue

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -604,18 +604,12 @@ footer {
   }
 }
 
-
-.history {
-  img {
-    width: 100%;
-  }
-}
-
 #snapshot-2013 {
   div a > img {
     padding-right: 25px;
   }
   img {
+    width: 100%;
     margin-top: 20px;
   }
   .blog-read-more {
